# skylos

./: .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASE_WORKFLOW.md  pyproject.toml  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: corpus.yml  publish.yml  quality-benchmark.yml  release-please.yml
agent_review_benchmarks/: README.md  manifest.json
agent_review_benchmarks/fixtures/async_blocking_handler/: app.py
agent_review_benchmarks/fixtures/cross_file_sql_injection/: app.py  db.py  repository.py
agent_review_benchmarks/fixtures/debt_hotspot_service/: app.py  ledger.py  worker.py
agent_review_benchmarks/fixtures/duplicate_condition/: module.py
corpus/: README.md  manifest.json
corpus/fixtures/: aiohttp_routes.py  always_false_loop.py  attrs_define.py  celery_task_class.py  click_command_subclass.py  django_admin_register.py  django_appconfig.py  django_cbv.py  django_management_command.py  django_signal_receiver.py  django_urlpatterns.py  drf_serializer.py  drf_viewset.py  fastapi_add_api_route.py  fastapi_include_router.py  fastapi_pydantic_model.py  flask_add_url_rule.py  marshmallow_schema.py  marshmallow_validates_schema.py  pydantic_computed_field.py  pydantic_model_post_init.py  pydantic_serializer_hooks.py  pydantic_settings_model.py  python_abstract_base.py  python_cached_property.py  python_enum_members.py  python_property_chain.py  python_protocol_impl.py  python_type_checking.py  sqlalchemy_event_listener.py  sqlalchemy_hybrid_property.py  sqlalchemy_listens_for.py  sqlalchemy_model.py
quality_benchmarks/: README.md  manifest.json
scripts/: agent_review_benchmark.py  compare_codex_skylos_agent_review.py  compare_codex_skylos_demo_deadcode.py  compare_codex_skylos_quality.py  corpus_ci.py  quality_benchmark.py
skylos/: __init__.py  agent_center.py  agent_payload.py  agent_review_benchmark.py  analyzer.py  api.py  city.py  cli.py  corpus_ci.py  demo_deadcode_benchmark.py  file_discovery.py  help.py  known_patterns.py  login.py  nudge.py  penalties.py  pipeline.py  quality_benchmark.py  server.py  server_frontend.py  sync.py  tour.py  visitor.py
skylos/adapters/: litellm_adapter.py
skylos/cicd/: review.py
skylos/commands/: cicd_cmd.py  city_cmd.py  clean_cmd.py  credits_cmd.py  debt_cmd.py  defend_cmd.py  doctor_cmd.py  project_cmd.py  rules_cmd.py  whoami_cmd.py
skylos/debt/: baseline.py  engine.py  policy.py  report.py  scoring.py
skylos/llm/: agents.py  analyzer.py  cleanup_orchestrator.py  context.py  graph.py  orchestrator.py  prompts.py  repo_activation.py  runtime.py  schemas.py  validator.py  verify_orchestrator.py
skylos/visitors/: framework_aware.py
skylos_mcp/: server.py
test/: test_agent_center.py  test_agent_integration.py  test_agent_review_benchmark.py  test_agent_review_compare.py  test_agents.py  test_analyzer.py  test_api.py  test_changes_analyzer.py  test_city.py  test_clean_cmd.py  test_cli.py  test_cli_agent_parser.py  test_cli_coverage.py  test_cli_decorators.py  test_cli_refactor_guardrails.py  test_cli_uncovered_paths.py  test_community_rules.py  test_corpus_ci.py  test_debt.py  test_demo_deadcode_benchmark.py  test_fast_parity.py  test_feedback.py  test_framework_aware.py  test_grep_verify.py  test_litellm_adapter.py  test_llm_analyzer.py  test_llm_context.py  test_llm_prompts.py  test_llm_runtime.py  test_llm_schemas.py  test_logic.py  test_login.py  test_mcp_security.py  test_pipeline.py  test_provenance_security.py  test_quality_benchmark.py  test_regression.py  test_repo_activation.py  test_server.py  test_server_frontend.py  (+9 more)
tools/release/: release-please-config.json
(+46 files in other folders)
